Add and style footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
 </head>
 <body>
-    
+    <nav>
+        Nav
+    </nav>
+    <header class="hero">
+        Header
+    </header>
+    <section>
+        Sale Items
+    </section>
+    <footer>
+        <p class="align-center light small">© generoshop 2020. All Rights Reserved. <a href="#">Privacy Policy</a>.</p>
+    </footer>
+    <script type="text/javascript" src="lib/main.js"></script>
 </body>
 </html>
