Add callout section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
     <section>
         Sale Items
     </section>
+    <section>
+        <div class="callout container">
+            <div id="secure_payment" class="item">
+                <img src="assets/iconfinder_card_4635000.png">
+                <h2>Secure Payment</h2>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec vestibulum magna, et dapibus lacus. Lorem ipsum dolor
+                sit amet.
+            </div>
+            <div id="free_shipping" class="item">
+                <img src="assets/iconfinder_shipping_ecommerce_shop_4177550.png">
+                <h2>Free Shipping</h2>
+                Duis nec vestibulum magna, et dapibus lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
+                sit amet.
+            </div>
+        </div>
+        
+
+
+    </section>
     <footer>
         <p class="align-center light small">© generoshop 2020. All Rights Reserved. <a href="#">Privacy Policy</a>.</p>
     </footer>
