Add offer banner; refactor CSS for organization

--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
     <header class="hero">
         Header
     </header>
+    <aside>
+        <div class="offer">
+            <p class="thin">Use code <strong>FREESHIP</strong> for free shipping on orders over $100</p>
+        </div>
+    </aside>
     <section>
-        Sale Items
+        <div class="products">
+            <h2>Popular Products</h2>
+                    Sale Items
+        </div>
     </section>
     <section>
         <div class="callout container">
@@ -33,12 +41,9 @@
                 sit amet.
             </div>
         </div>
-        
-
-
     </section>
     <footer>
-        <p class="align-center light small">© generoshop 2020. All Rights Reserved. <a href="#">Privacy Policy</a>.</p>
+        <p>© generoshop 2020. All Rights Reserved. <a href="#">Privacy Policy</a>.</p>
     </footer>
     <script type="text/javascript" src="lib/main.js"></script>
 </body>
