--- a/index.html
+++ b/index.html
@@ -12,8 +12,21 @@
     <nav>
         Nav
     </nav>
-    <header class="hero">
-        Header
+    <header>
+        <div class="hero">
+            <div class="hero-text">
+                <div class="subhead tk-shelby">
+                    <div class="border"></div>
+                    <div>Save up to 40%</div>
+                    <div class="border"></div>
+                </div>
+                <h1 class="title thin">
+                    Black <strong>Friday</strong> Sale
+                </h1>
+                <p><a href="#" class="button">Shop Now</a></p>
+                <span class="description  tk-shelby">Free shipping on selected items</span>
+            </div>
+        </div>
     </header>
     <aside>
         <div class="offer">
