--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 <body>
     <nav>
-        Nav
+        <div class="nav">
+                <div class="logo">
+                    <img src="assets/testpg-logo.svg" alt="Generososhop logo">
+                    <div class="menu-container">
+                        <img id="cart-icon" src="assets/testpg-icon-cart--purple.png" alt="Shopping Cart">
+                        <img id="menu-icon" src="assets/testpg-icon-menu--purple.png" alt="Menu">
+                    </div>
+                </div>
+            </div>
+        </div>
     </nav>
     <header>
         <div class="hero">
@@ -23,7 +32,7 @@
                 <h1 class="title thin">
                     Black <strong>Friday</strong> Sale
                 </h1>
-                <p><a href="#" class="button">Shop Now</a></p>
+                <p class="shop-now-container"><a href="#" class="button">Shop Now</a></p>
                 <span class="description  tk-shelby">Free shipping on selected items</span>
             </div>
         </div>
@@ -35,8 +44,15 @@
     </aside>
     <section>
         <div class="products">
-            <h2>Popular Products</h2>
-                    Sale Items
+            <h2 class="tk-shelby">Popular Products</h2>
+            <div class="container">
+                <div class="product">
+                    <img src="assets/testpg-product-img-dress.jpg">
+                    <p class="product-category">Apparel</p>
+                    <p class="product-name">Cocktail Dress</p>
+                    <p class="product-price">$300.00</p>
+                </div>
+            </div>
         </div>
     </section>
     <section>
