--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
     <section>
         <div class="products">
             <h2 class="tk-shelby">Popular Products</h2>
-            <div class="container">
+            <div class="container" id="products-container">
                 <div class="product">
-                    <img src="assets/testpg-product-img-dress.jpg">
+                    <div class="product-image">
+                        <img src="assets/testpg-product-img-dress.jpg">
+                        <div class="add-to-cart">
+                            Add To Cart
+                        </div>
+                    </div>
                     <p class="product-category">Apparel</p>
                     <p class="product-name">Cocktail Dress</p>
                     <p class="product-price">$300.00</p>
