--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
                 <h1 class="title thin">
                     Black <strong>Friday</strong> Sale
                 </h1>
-                <p class="shop-now-container"><a href="#" class="button">Shop Now</a></p>
+                <p class="shop-now-container"><a href="#products" class="button">Shop Now</a></p>
                 <span class="description  tk-shelby">Free shipping on selected items</span>
             </div>
         </div>
     </header>
-    <aside>
+    <aside id="offer">
         <div class="offer">
             <p class="thin">Use code <strong>FREESHIP</strong> for free shipping on orders over $100</p>
         </div>
     </aside>
-    <section>
+    <section id="products">
         <div class="products">
             <h2 class="tk-shelby">Popular Products</h2>
             <div class="container" id="products-container">
             </div>
         </div>
     </section>
-    <section>
+    <section id="callout">
         <div class="callout container">
             <div id="secure_payment" class="item">
                 <img src="assets/iconfinder_card_4635000.png">
@@ -67,19 +67,14 @@
     </section>
     <section id="shopping-cart">
         <div class="shopping-cart visible">
+            <img src="assets/testpg-icon-close-button-black.png" onClick="hideCart()" class="cart-close">
             <h2>Shopping Cart</h2>
             <ul id="cart-product-list">
-                <li class="cart-product">
-                    <img class="cart-product-image" src="assets/testpg-product-img-satchel.jpg">
-                    <strong class="cart-product-title">
-                        Leather Satchel
-                    </strong><br />
-                    1 x $250.00
-                </li>
             </ul>
             <div class="cart-subtotal">
-                SUBTOTAL: <span id="cart-subtotal">$250.00</span>
+                SUBTOTAL: <span id="cart-subtotal">$0.00</span>
             </div>
+            <p class="checkout-container"><a href="#" class="button">Checkout</a></p>
 
         </div>
     </section>
