Add cart number badge

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <div class="logo">
                     <img src="assets/testpg-logo.svg" alt="Generososhop logo">
                     <div class="menu-container">
-                        <img id="cart-icon" src="assets/testpg-icon-cart--purple.png" alt="Shopping Cart" onClick="showCart()">
+                        <div id="cart-icon" onClick="showCart()">
+                            <p id="cart-count">0</p>
+                        </div>
                         <img id="menu-icon" src="assets/testpg-icon-menu--purple.png" alt="Menu">
                     </div>
                 </div>
